--- a/.github/workflows/hf-space-sync.yml
+++ b/.github/workflows/hf-space-sync.yml
@@ -18,4 +18,5 @@ jobs:
           subdirectory: .        # change if your app is in a subfolder
           space_branch: main
         env:
-          HF_TOKEN: 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
+          HF_TOKEN: ${{ secrets.HF_token}}
+    
