--- a/.github/workflows/hf-space-sync.yml
+++ b/.github/workflows/hf-space-sync.yml
@@ -2,21 +2,24 @@ name: Sync With Hugging Face Space
 
 on:
   push:
-    branches: [ main ]   # or your branch
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  sync:
+  push-to-space:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Sync to Space
-        uses: alex-bene/huggingface-space-sync-action@v0.1
-        with:
-          github_repo_id: Aadi070201/Battery_app            # <-- your GitHub repo
-          github_branch: main
-          huggingface_repo_id: Aadi070201/battery_detect    # <-- your Space
-          hf_username: Aadi070201
-          hf_token: ${{ secrets.HF_TOKEN }}
-          yaml_header_path: .github/hf_readme_header.md
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Push to Space main (force overwrite)
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          SPACE: Aadi070201/battery_detect
+        run: |
+          git remote add space https://oauth2:${HF_TOKEN}@huggingface.co/spaces/${SPACE}
+          git push space HEAD:main --force
