--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 anomalib==1.0.0
+lightning==2.3.2
 gradio>=5.46.1
 numpy==1.26.4
-opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+
+# CPU wheels for PyTorch (fast build; works on free CPU Spaces)
 torch==2.2.2 --index-url https://download.pytorch.org/whl/cpu
 torchvision==0.17.2 --index-url https://download.pytorch.org/whl/cpu
+
+# model download + gradio-client compatibility
 huggingface_hub>=0.35.0
 websockets>=12.0
