--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
+# Core model + engine
 anomalib==1.0.0
 lightning==2.3.2
-gradio>=5.46.1
+
+# Numeric + image
 numpy==1.26.4
 opencv-python-headless==4.10.0.84
+scikit-image==0.24.0
+scikit-learn==1.5.1
+matplotlib==3.9.1
+pillow==10.4.0
 
-# CPU wheels for PyTorch (fast build; works on free CPU Spaces)
+# PyTorch CPU wheels (for free CPU Space)
 torch==2.2.2 --index-url https://download.pytorch.org/whl/cpu
 torchvision==0.17.2 --index-url https://download.pytorch.org/whl/cpu
 
-# model download + gradio-client compatibility
+# UI + model fetch + websocket fix for Gradio 5.x
+gradio>=5.46.1
 huggingface_hub>=0.35.0
 websockets>=12.0
+
+# tiny helper used by anomalib/your prints
+tqdm==4.66.4
